Fix console widget style on mobile (#1090)
This changes the console widget style so it looks better on mobile. It
1. Shrinks the link text slightly when the width shrinks. This is the
same shrinking that we have for the nav header and footer.
2. When there isn't enough space for the links they now wrap "inside"
themselves.
3. Switch the "bad language" warning from "not displayed" to "not
visible" to it takes up space all the time. This should prevent weird
stuff happening when it needs to be shown on mobile.

--- a/resources/web/styles.pcss
+++ b/resources/web/styles.pcss
@@ -279,10 +279,14 @@ p.remark {
     cursor: pointer;
     font-weight: 500;
     text-decoration: underline;
-}
-
-#guide a.view_in_link {
-    margin-left: 20px;
+    margin-right: 20px;
+    @media screen and (max-width: 800px) {
+      font-size: 13px;
+    }
+    @media screen and (max-width: 500px) {
+      font-size: 12px;
+      margin-right: 5px;
+    }
 }
 
 #guide a.console_settings {
@@ -290,8 +294,10 @@ p.remark {
   display: inline-block;
   width: 16px;
   height: 16px;
+  min-width: 16px;
+  min-height: 16px;
   vertical-align: text-bottom;
-  margin-left: 1em;
+  align-self: center;
   &:hover {
     text-decoration: none !important;
     cursor: pointer;
